<resources>
    <string name="app_name">T4SyncWave</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="your_gmail_com">your@gmail.com</string>
    <string name="password">Password</string>
    <string name="your_password">Your password</string>
    <string name="remember_me">Remember me</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="no_groups_have_been_nadded_yet">No groups have been\nadded yet.</string>
    <string name="sign_out">Sign out</string>
    <string name="add_group">Add Group</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="groups">Groups</string>
    <string name="add_member">Add member</string>
    <string name="code">Code</string>
    <string name="members">Members</string>
    <string name="choose_a_track_to_start_listening_together">Choose a track to start listening together</string>
    <string name="no_music_playing">No music playing</string>
    <string name="no_music_has_been_added_yet">No music has been added yet.</string>
    <string name="library">Library</string>
    <string name="listener">Listener</string>
    <string name="my_groups">My Groups</string>
    <string name="all_groups">All Groups</string>
    <string name="created">Created</string>
    <string name="joined">Joined</string>
    <string name="add_new_member">Add New Member</string>
    <string name="profile">Profile</string>
    <string name="_0_00">0:00</string>
    <string name="enter_the_6_character_groups_code_nshared_by_the_dj">Enter the 6-character groups code\nshared by the Dj</string>
    <string name="join_group">Join group</string>
    <string name="cancel">Cancel</string>
    <string name="join_a_group">Join a Group</string>
    <string name="listeners">Listeners</string>
    <string name="dj">DJ</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="group_code">Group Code</string>
    <string name="you">You</string>
    <string name="online">Online</string>
</resources>