<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/header_notification_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/primary_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/join_a_group"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/header_notification_error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="14sp"
                    android:gravity="center"
                    android:text="@string/enter_the_6_character_groups_code_nshared_by_the_dj"
                    android:textColor="@color/soft_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/groupCodeLayout"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundMode="outline"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/groupCodeValue"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textColor="@color/text_color"
                        android:paddingVertical="8dp"
                        android:hint="Group Code"
                        android:textColorHint="@color/gray_hint"
                        android:inputType="text|textEmailAddress"
                        android:textSize="15sp"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:paddingTop="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/red"
                    app:cornerRadius="12dp"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnJoin"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/join_group"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/primary_color"
                    app:cornerRadius="12dp" />

            </LinearLayout>

        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

