<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.room.GroupAdminFragment">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:padding="4dp"
        android:id="@+id/header"
        android:gravity="center_vertical"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnBack"
            android:layout_margin="5dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_back"
            android:tint="@color/white"
            android:background="@drawable/bg_circle"
            android:elevation="6dp"
            android:padding="8dp"
            android:scaleType="centerInside"/>

        <TextView
            android:id="@+id/groupName"
            android:textColor="@color/primary_color"
            android:layout_weight="1"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="5dp"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="5dp"
                android:background="@color/background_item"
                app:cardCornerRadius="20dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/background_item"
                    android:padding="6dp"
                    android:gravity="center_vertical">

                    <FrameLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp">

                        <ImageView
                            android:id="@+id/avatarIv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_profile_fill_24"
                            android:scaleType="centerCrop"
                            app:tint="@color/primary_color"/>

                        <ImageView
                            android:id="@+id/statusOnlineIv"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_gravity="bottom|end"
                            android:layout_margin="2dp"
                            android:src="@drawable/ic_status"/>

                        <ImageView
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_marginBottom="5dp"
                            android:layout_gravity="top|center"
                            android:src="@drawable/ic_crown"/>
                    </FrameLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_marginStart="12dp">

                        <TextView
                            android:id="@+id/djNameTv"
                            android:text=""
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/djEmailTv"
                            android:textSize="13sp"
                            android:textColor="@color/text_color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/roleTv"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:text="@string/dj"
                        android:textColor="@color/white"
                        android:background="@drawable/bg_role_badge"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="5dp"
                android:background="@color/background_item"
                app:cardCornerRadius="20dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/background_item"
                    android:padding="15dp"
                    android:gravity="center_vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/musicInGroupRv"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxHeight="180dp"/>


                    <com.t4app.t4syncwave.ui.AudioPlayerView
                        android:id="@+id/audioPlayerView"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <LinearLayout
                        android:id="@+id/containerNoMusic"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:visibility="visible"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/ic_music"
                            app:tint="@color/primary_color_light"
                            android:layout_width="66dp"
                            android:layout_height="66dp"/>

                        <TextView
                            android:text="@string/no_music_playing"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:text="@string/choose_a_track_to_start_listening_together"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/gray_hint"
                            android:textSize="14sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnAddMusic"
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="43dp"
                            android:text="Add music"
                            android:textColor="@color/white"
                            android:backgroundTint="@color/primary_color"
                            app:cornerRadius="12dp"
                            app:icon="@drawable/ic_add"
                            app:iconTint="@color/white"
                            app:iconGravity="textStart"/>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/membersCountTv"
                android:text="@string/online"
                android:layout_marginStart="10dp"
                android:textColor="@color/green_success"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="5dp"
                android:background="@color/background_item"
                app:cardCornerRadius="20dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/background_item"
                    android:padding="8dp"
                    android:gravity="center_vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/membersRv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxHeight="180dp"/>

                    <View
                        android:id="@+id/separation"
                        android:visibility="gone"
                        android:background="@color/gray_light"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:id="@+id/addMemberBtn"
                        android:gravity="center_vertical"
                        android:paddingTop="7dp"
                        android:background="@color/background"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_add"
                            android:scaleType="fitCenter"
                            android:padding="4dp"
                            android:layout_marginEnd="8dp"
                            android:layout_width="46dp"
                            android:layout_height="40dp"/>

                        <TextView
                            android:textColor="@color/primary_color"
                            android:text="Invite Listener"
                            android:layout_weight="1"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textSize="16sp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/offlineText"
                android:text="Offline"
                android:layout_marginStart="10dp"
                android:textColor="@color/gray_hint"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="5dp"
                android:background="@color/background_item"
                app:cardCornerRadius="20dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/background_item"
                    android:padding="10dp"
                    android:gravity="center_vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/offlineMembersRv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxHeight="180dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:visibility="visible"
                android:layout_marginTop="5dp"
                android:background="@color/background_item"
                app:cardCornerRadius="20dp"
                app:cardElevation="6dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/background_item"
                    android:padding="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:text="Group Info"
                        android:textColor="@color/gray_hint"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:background="@color/background"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textColor="@color/black"
                            android:text="@string/code"
                            android:layout_weight="1"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textSize="16sp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/codeGroupValue"
                            android:textColor="@color/gray_hint"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

</LinearLayout>